# gunicorn-flask-swagger-example

./: README.md  pyproject.toml  setup.cfg
src/gfse/: app.py
src/gfse/api/: __init__.py  routes.py
